--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/ankur377/node_app#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongodb": "^4.8.1",
+    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19"
   }
 }
