--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
-    "dynamic-html-pdf": "^1.0.4",
+    "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
@@ -28,6 +28,7 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.2",
     "node-json2html": "^2.2.2",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "pdf-creator-node": "^2.3.5"
   }
